--- a/src/components/Contacts/style.css
+++ b/src/components/Contacts/style.css
@@ -1,9 +1,12 @@
+body {
+  background-color: #8a69d8;
+}
 #contacts-app {
   max-width: 400px;
   min-height: 75vh;
   width: 100%;
   background-color: #512da8;
-  margin: 0 auto;
+  margin: 10vh auto;
   padding: 20px;
   border-radius: 8px;
   color: #ffffff;
